# zombiasm

./: .gitignore  CMakeLists.txt  hello.asm  lexer.c  main.c  prog.asm
inc/: common.h  lexer.h
notes/: DESCRIPTION.md
tests/: test_lexer.c
